--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ install:
   - pip install coveralls
 
 script: 
-  - make test
-  - coverage run --source=threadloop setup.py test
+  - coverage run --source=threadloop make test
 
 after_success:
   - coveralls
