--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: python
 
 python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-
+    - 2.6
+    - 2.7
+    - pypy
+    - 3.2
+    - 3.3
+    - 3.4
+    - pypy3
+  
 install:
   - make install
 
